Fix T40049: cycles baking glossy shader looks faceted.

Use smooth normal instead of flat normal as view direction.